test/Fail/PostulatedSizeInModule.agda
{-# OPTIONS --sized-types #-}

open import Common.Size

module _ (A : Set) where

postulate i : Size
