test/Fail/PostulatedSizeInModule.err
PostulatedSizeInModule.agda:7.11-19: error: [PostulatedSizeInModule]
We don't like postulated sizes in parametrized modules.
